--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Email Validator</title>
 <script>
 function validateemail() {
     var x = document.forms["myForm"]["email"].value;
